[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/Restaurant/Customer.gd" type="Script" id=1]
[ext_resource path="res://scenes/Restaurant/FatPlayer.gd" type="Script" id=2]
[ext_resource path="res://scenes/Restaurant/OutlineSprite.gd" type="Script" id=3]
[ext_resource path="res://scenes/Restaurant/SmoothPathOutline.gd" type="Script" id=4]
[ext_resource path="res://scenes/Restaurant/CustomerBody.gd" type="Script" id=5]
[ext_resource path="res://art/eat-anim/mouth-outline-sheet.png" type="Texture" id=6]
[ext_resource path="res://art/customer/customer-far-arm.png" type="Texture" id=7]
[ext_resource path="res://art/restaurant/wood-table.png" type="Texture" id=8]
[ext_resource path="res://art/restaurant/stool-occupied.png" type="Texture" id=9]
[ext_resource path="res://art/restaurant/stool.png" type="Texture" id=10]
[ext_resource path="res://art/eat-anim/eyes-outline-sheet.png" type="Texture" id=11]
[ext_resource path="res://art/eat-anim/head-outline.png" type="Texture" id=12]
[ext_resource path="res://art/eat-anim/mouth-sheet.png" type="Texture" id=13]
[ext_resource path="res://art/eat-anim/head.png" type="Texture" id=14]
[ext_resource path="res://art/eat-anim/food-sheet.png" type="Texture" id=15]
[ext_resource path="res://art/eat-anim/food-laser-sheet.png" type="Texture" id=16]
[ext_resource path="res://sound/munch1.wav" type="AudioStream" id=17]
[ext_resource path="res://sound/munch0.wav" type="AudioStream" id=18]
[ext_resource path="res://art/customer/customer-far-leg.png" type="Texture" id=19]
[ext_resource path="res://art/eat-anim/eyes-sheet.png" type="Texture" id=20]
[ext_resource path="res://sound/munch2.wav" type="AudioStream" id=21]
[ext_resource path="res://art/customer/customer-far-arm-outline.png" type="Texture" id=22]
[ext_resource path="res://sound/munch4.wav" type="AudioStream" id=23]
[ext_resource path="res://art/customer/customer-far-leg-outline.png" type="Texture" id=24]
[ext_resource path="res://art/customer/customer-near-arm.png" type="Texture" id=25]
[ext_resource path="res://art/customer/customer-near-arm-outline.png" type="Texture" id=26]
[ext_resource path="res://sound/munch3.wav" type="AudioStream" id=27]
[ext_resource path="res://art/customer/customer-near-leg-outline.png" type="Texture" id=28]
[ext_resource path="res://art/customer/customer-near-leg.png" type="Texture" id=29]
[ext_resource path="res://scenes/Restaurant/Seat.gd" type="Script" id=30]

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 24.9977, 0.341151, -32.9037, -0.449047, -11.158, -72.0639, -0.631155, -31.5491, 0.500038, 24.995, -62.0516, -16.4455, -27.2528, -0.551655, 30.9852, 0.627207, -13.1955, 28.0658, -0.010441, 25, 0.011404, -27.3082, 37.7671, -13.4088, 27.0964, -1.30105, -24.9712, 1.19901, -11.0971, -72.0781 )
}

[sub_resource type="Animation" id=2]
length = 7.0
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("NeckOutline/HeadOutline/EyesOutline:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.93333, 6.96667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Neck/Head/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.93333, 6.96667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 13 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("NeckOutline/HeadOutline/MouthOutline:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NeckOutline/HeadOutline/EyesOutline:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.561, 0.594 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Neck/Head/Mouth:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Neck/Head/Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.561, 0.594 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../KludgeCustomer/KludgeNeck/KludgeHead/Food:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666666, 0.0999999, 0.133333, 0.166667, 0.2, 0.233333, 0.266666, 0.3, 0.333333, 0.366666, 0.4, 0.433333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../KludgeCustomer/KludgeNeck/KludgeHead/FoodLaser:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666666, 0.0999999, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("NeckOutline/HeadOutline/MouthOutline:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NeckOutline/HeadOutline/EyesOutline:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.726, 0.759 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Neck/Head/Mouth:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Neck/Head/Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.726, 0.759 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../KludgeCustomer/KludgeNeck/KludgeHead/Food:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666666 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../KludgeCustomer/KludgeNeck/KludgeHead/FoodLaser:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.033, 0, 0.0333333, 0.0666666 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fat"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("NearArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 7.00775, -19.2712 ), Vector2( 0.667999, -32.9261 ), Vector2( -15.4252, -85.1072 ), Vector2( -43.4252, -157.107 ), Vector2( -89.4498, -342.343 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FarArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 33.8707, -11.0956 ), Vector2( 54.353, -31.0902 ), Vector2( 82.1504, -88.6357 ), Vector2( 166.083, -175.299 ), Vector2( 374.881, -397.689 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:_fatness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NearLeg:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 7.253, 0 ), Vector2( 10.179, 0 ), Vector2( 5.30226, -8.29047 ), Vector2( -20.6977, 2.7095 ), Vector2( -59.4692, 6.5144 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FarLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 30.091, 0 ), Vector2( 50.086, 0 ), Vector2( 88.6123, -15.1179 ), Vector2( 186.882, -22.8557 ), Vector2( 451.803, -42.8278 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Neck:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -24.525 ), Vector2( 4, -54 ), Vector2( 17, -121 ), Vector2( 17, -255 ), Vector2( 81.7715, -561.446 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("..:_customer_shadow_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 1.5, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.17, 0.17 ), Vector2( 0.17, 0.17 ), Vector2( 0.2, 0.2 ), Vector2( 0.55, 0.55 ), Vector2( 1.05, 1.05 ) ]
}

[node name="Seat" type="Control"]
margin_left = 380.0
margin_top = 585.0
margin_right = 420.0
margin_bottom = 625.0
script = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}
_customer_shadow_scale = Vector2( 0.17, 0.17 )

[node name="Stool0L" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 9 )
offset = Vector2( 0, -70 )

[node name="Customer" type="Node2D" parent="."]
light_mask = 2
position = Vector2( 1.228, -149.237 )
script = ExtResource( 1 )

[node name="FarArmOutline" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 22 )
offset = Vector2( 0, -100 )
script = ExtResource( 3 )
_parent_path = NodePath("../FarArm")

[node name="FarLegOutline" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 24 )
offset = Vector2( 0, -100 )
script = ExtResource( 3 )
_parent_path = NodePath("../FarLeg")

[node name="BodyOutline" type="Path2D" parent="Customer"]
self_modulate = Color( 1, 1, 1, 1 )
light_mask = 2
curve = SubResource( 1 )
script = ExtResource( 4 )
spline_length = 25.0
_smooth = false
_straighten = false
closed = true
line_color = Color( 0.423529, 0.262745, 0.192157, 1 )
fill_color = Color( 1, 1, 1, 0 )
line_width = 8.0
_parent_path_path = NodePath("../Body")

[node name="NearLegOutline" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 28 )
offset = Vector2( 0, -100 )
script = ExtResource( 3 )
_parent_path = NodePath("../NearLeg")

[node name="NearArmOutline" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 26 )
offset = Vector2( 0, -100 )
script = ExtResource( 3 )
_parent_path = NodePath("../NearArm")

[node name="NeckOutline" type="Sprite" parent="Customer"]
offset = Vector2( 0, -100 )
script = ExtResource( 3 )
_parent_path = NodePath("../Neck")

[node name="HeadOutline" type="Sprite" parent="Customer/NeckOutline"]
light_mask = 2
position = Vector2( 0, -100 )
texture = ExtResource( 12 )
script = ExtResource( 3 )
_parent_path = NodePath("../../Neck/Head")

[node name="MouthOutline" type="Sprite" parent="Customer/NeckOutline/HeadOutline"]
light_mask = 2
texture = ExtResource( 6 )
vframes = 3
hframes = 8
script = ExtResource( 3 )
_parent_path = NodePath("../../../Neck/Head/Mouth")

[node name="EyesOutline" type="Sprite" parent="Customer/NeckOutline/HeadOutline"]
light_mask = 2
texture = ExtResource( 11 )
vframes = 3
hframes = 8
script = ExtResource( 3 )
_parent_path = NodePath("../../../Neck/Head/Eyes")

[node name="FarArm" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 7 )
offset = Vector2( 0, -100 )

[node name="FarLeg" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 19 )
offset = Vector2( 0, -100 )

[node name="Body" type="Path2D" parent="Customer"]
self_modulate = Color( 1, 1, 1, 1 )
light_mask = 2
curve = SubResource( 1 )
script = ExtResource( 5 )
spline_length = 25.0
_smooth = false
_straighten = false
closed = true
line_color = Color( 0.423529, 0.262745, 0.192157, 1 )
fill_color = Color( 0.235294, 0.517647, 0.172549, 1 )
line_width = 2.5
_fatness = 1.0
editing = false

[node name="NearLeg" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 29 )
offset = Vector2( 0, -100 )

[node name="NearArm" type="Sprite" parent="Customer"]
light_mask = 2
texture = ExtResource( 25 )
offset = Vector2( 0, -100 )

[node name="Neck" type="Sprite" parent="Customer"]
__meta__ = {
"_edit_group_": true,
"_editor_description_": "\"Neck\" is used for animation purposes, so that the head's position can change as the customer grows, but can also continue to animate independently of that."
}

[node name="Head" type="Sprite" parent="Customer/Neck"]
light_mask = 2
position = Vector2( 0, -100 )
texture = ExtResource( 14 )

[node name="Mouth" type="Sprite" parent="Customer/Neck/Head"]
light_mask = 2
texture = ExtResource( 13 )
vframes = 3
hframes = 8

[node name="Eyes" type="Sprite" parent="Customer/Neck/Head"]
light_mask = 2
texture = ExtResource( 20 )
vframes = 3
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Customer"]
anims/Blink = SubResource( 2 )
anims/Eat = SubResource( 3 )
anims/EatAgain = SubResource( 4 )

[node name="FatPlayer" type="AnimationPlayer" parent="Customer"]
anims/Fat = SubResource( 5 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Customer"]

[node name="Munch0" type="AudioStreamPlayer" parent="Customer"]
stream = ExtResource( 18 )
bus = "Reverb Bus"

[node name="Munch1" type="AudioStreamPlayer" parent="Customer"]
stream = ExtResource( 17 )
bus = "Reverb Bus"

[node name="Munch2" type="AudioStreamPlayer" parent="Customer"]
stream = ExtResource( 21 )
bus = "Reverb Bus"

[node name="Munch3" type="AudioStreamPlayer" parent="Customer"]
stream = ExtResource( 27 )
bus = "Reverb Bus"

[node name="Munch4" type="AudioStreamPlayer" parent="Customer"]
stream = ExtResource( 23 )
bus = "Reverb Bus"

[node name="WoodTable0" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 220, -20 )
texture = ExtResource( 8 )
offset = Vector2( 0, -50 )

[node name="Stool0R" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 440, 0 )
texture = ExtResource( 10 )
offset = Vector2( 0, -70 )

[node name="KludgeCustomer" type="Sprite" parent="."]
position = Vector2( 1.228, -149.237 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Tossed food needs to appear in front of the furniture, but also needs to track the customer's head. This object is used to keep the positions in sync."
}
_parent_path = NodePath("../Customer")

[node name="KludgeNeck" type="Sprite" parent="KludgeCustomer"]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
_parent_path = NodePath("../../Customer/Neck")

[node name="KludgeHead" type="Sprite" parent="KludgeCustomer/KludgeNeck"]
position = Vector2( 0, -100 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
_parent_path = NodePath("../../../Customer/Neck/Head")

[node name="Food" type="Sprite" parent="KludgeCustomer/KludgeNeck/KludgeHead"]
light_mask = 2
texture = ExtResource( 15 )
vframes = 3
hframes = 8

[node name="FoodLaser" type="Sprite" parent="KludgeCustomer/KludgeNeck/KludgeHead"]
light_mask = 2
position = Vector2( 1100, 0 )
scale = Vector2( 6, 1 )
texture = ExtResource( 16 )
hframes = 3
